--- a/clustering-notebook.ipynb
+++ b/clustering-notebook.ipynb
@@ -1,6 +1,160 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e449870f",
+   "metadata": {},
+   "source": [
+    "# Intelligent Bookmark Organization Using Hierarchical Clustering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d5113ce",
+   "metadata": {},
+   "source": [
+    "## 1. Introduction: The Problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a42423d6",
+   "metadata": {},
+   "source": [
+    "### The Challenge of Digital Organization\n",
+    "Modern internet users collect hundreds of bookmarks across various topics—learning resources, career tools, entertainment sites, and utilities. Without organization, these bookmarks become a digital junkyard where finding anything requires scrolling through endless lists or using browser search.\n",
+    "\n",
+    "**Manual folder organization is time-consuming and inconsistent:**\n",
+    "- Users must decide folder names and hierarchy upfront\n",
+    "- Categorization is subjective and changes over time  \n",
+    "- New bookmarks often get saved to generic \"Other\" folders\n",
+    "- Similar content gets scattered across multiple folders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45f21061",
+   "metadata": {},
+   "source": [
+    "### My Solution: Automated Clustering\n",
+    "\n",
+    "**Research Question:** Can we automatically organize bookmarks into meaningful thematic folders using unsupervised machine learning?\n",
+    "\n",
+    "**Specific Goals:**\n",
+    "1. Group semantically similar bookmarks together without manual labeling\n",
+    "2. Determine the optimal number of folders (clusters) for usability\n",
+    "3. Generate human-readable folder names that describe each cluster's theme\n",
+    "4. Handle diverse bookmark collections (learning, entertainment, tools, career resources)\n",
+    "\n",
+    "**Why Clustering?**\n",
+    "Unlike supervised learning (which requires labeled training data), clustering discovers hidden patterns in unlabeled data—perfect for personal bookmark collections where no predefined categories exist. We'll use **Agglomerative Hierarchical Clustering** to group bookmarks based on semantic similarity of their descriptions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3178ca5",
+   "metadata": {},
+   "source": [
+    "### Project Scope\n",
+    "\n",
+    "We'll analyze **256 personal bookmarks** spanning technical interview prep, online courses, entertainment streaming sites, productivity tools, and more. The clustering algorithm will organize these into 8-15 thematic folders, mimicking how users naturally group related content."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fc4d23f",
+   "metadata": {},
+   "source": [
+    "## 2. What is Clustering and How Does It Work?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fda1fe33",
+   "metadata": {},
+   "source": [
+    "### Clustering Fundamentals\n",
+    "\n",
+    "**Clustering** is an unsupervised machine learning technique that groups similar data points together without predefined labels. Unlike classification (which assigns data to known categories), clustering *discovers* natural groupings in the data.\n",
+    "\n",
+    "**Key Concept:** Objects in the same cluster should be more similar to each other than to objects in other clusters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03c189cc",
+   "metadata": {},
+   "source": [
+    "### Agglomerative Hierarchical Clustering\n",
+    "\n",
+    "We chose **Agglomerative Hierarchical Clustering** for this project. Here's how it works:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c8dc078",
+   "metadata": {},
+   "source": [
+    "#### The Algorithm (Bottom-Up Approach)\n",
+    "\n",
+    "1. **Start:** Each bookmark is its own cluster (N clusters for N bookmarks)\n",
+    "2. **Merge:** Repeatedly combine the two most similar clusters\n",
+    "3. **Continue:** Until we reach the desired number of clusters (N)\n",
+    "4. **Output:** A hierarchy (dendrogram) showing how clusters merge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69e08be8",
+   "metadata": {},
+   "source": [
+    "#### Why Agglomerative Over K-Means?\n",
+    "\n",
+    "| Aspect | K-Means | Agglomerative |\n",
+    "|--------|---------|---------------|\n",
+    "| **Cluster Shape** | Assumes spherical clusters | Handles arbitrary shapes ✅ |\n",
+    "| **Sensitivity** | Sensitive to initialization | Deterministic (same result every time) ✅ |\n",
+    "| **Hierarchy** | No hierarchy | Creates dendrogram showing relationships ✅ |\n",
+    "| **Small Clusters** | Struggles with very small clusters | Handles uneven cluster sizes ✅ |\n",
+    "\n",
+    "**For bookmark organization**, Agglomerative is superior because:\n",
+    "- Some topics (interview prep) have many bookmarks, others (specific tools) have few\n",
+    "- We want consistent results every time the algorithm runs\n",
+    "- Hierarchical relationships make sense (e.g., \"Career Resources\" → \"Interview Prep\" → \"LeetCode Questions\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a3f75f6",
+   "metadata": {},
+   "source": [
+    "#### Linkage Method: Ward's Criterion\n",
+    "\n",
+    "We use **Ward linkage**, which minimizes the variance within clusters. At each merge step, Ward's method combines the two clusters that increase total intra-cluster variance the least.\n",
+    "\n",
+    "**Formula:** Ward minimizes:\n",
+    "$$\\sum_{i=1}^{k} \\sum_{x \\in C_i} ||x - \\mu_i||^2$$\n",
+    "\n",
+    "Where $C_i$ is cluster $i$ and $\\mu_i$ is its centroid.\n",
+    "\n",
+    "This produces compact, well-separated clusters—ideal for creating distinct bookmark folders."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81febd91",
+   "metadata": {},
+   "source": [
+    "#### Distance Metric: Euclidean Distance\n",
+    "\n",
+    "After converting bookmark descriptions to 384-dimensional embedding vectors (using sentence transformers), we measure similarity using **Euclidean distance**:\n",
+    "\n",
+    "$$d(x, y) = \\sqrt{\\sum_{i=1}^{384} (x_i - y_i)^2}$$\n",
+    "\n",
+    "Bookmarks with similar semantic meaning will have small distances in embedding space."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "0d26ebf4",
@@ -15,6 +169,81 @@
     "import numpy as np\n",
     "from sklearn.cluster import AgglomerativeClustering\n",
     "from sklearn.metrics import silhouette_score, davies_bouldin_score, calinski_harabasz_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09c5effb",
+   "metadata": {},
+   "source": [
+    "## 3. The Dataset: Personal Bookmark Collection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7153d061",
+   "metadata": {},
+   "source": [
+    "### Data Source\n",
+    "\n",
+    "**Primary Data:** 256 bookmarks exported from Google Chrome browser\n",
+    "- **Collection Period:** Accumulated over 2+ years of academic and personal use\n",
+    "- **Export Method:** Chrome Bookmark Manager → Export bookmarks → HTML file\n",
+    "- **Processing:** Custom Python scraper to extract URL metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b888c90",
+   "metadata": {},
+   "source": [
+    "### Data Collection Process\n",
+    "\n",
+    "For each bookmark URL, we extracted:\n",
+    "\n",
+    "1. **Title:** Original bookmark title from browser\n",
+    "2. **URL:** Full web address\n",
+    "3. **Description:** Extracted from HTML metadata tags in priority order:\n",
+    "   - `<meta name=\"description\">` (preferred—author-written summaries)\n",
+    "   - `<meta property=\"og:description\">` (Open Graph social media descriptions)\n",
+    "   - `<meta name=\"twitter:description\">` (Twitter card descriptions)  \n",
+    "   - First 400 characters of `<body>` text (fallback)\n",
+    "\n",
+    "4. **Content Type:** MIME type (text/html, application/pdf, etc.)\n",
+    "5. **Description Source:** Which metadata tag was used"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b535ab7e",
+   "metadata": {},
+   "source": [
+    "### Dataset Features\n",
+    "\n",
+    "| Feature | Description | Example |\n",
+    "|---------|-------------|---------|\n",
+    "| `title` | Bookmark name | \"LeetCode - The World's Leading Online Programming...\" |\n",
+    "| `url` | Web address | https://leetcode.com/ |\n",
+    "| `description` | Text summary of page content | \"Level up your coding skills and quickly land a job...\" |\n",
+    "| `description_source` | Where description came from | \"meta\", \"og\", \"body\", \"unknown\" |\n",
+    "| `content_type` | Page format | \"text/html; charset=utf-8\" |\n",
+    "| `html_length` | Size of HTML content | 150823 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc588c64",
+   "metadata": {},
+   "source": [
+    "### Why This Data is Suitable for Clustering\n",
+    "\n",
+    "1. **Rich semantic content:** Descriptions contain thematic keywords\n",
+    "2. **Natural diversity:** Mix of learning platforms, tools, entertainment, career resources\n",
+    "3. **No predefined labels:** Perfect for unsupervised learning\n",
+    "4. **Real-world messiness:** Includes PDFs, local files, dead links—mimics actual bookmark collections\n",
+    "5. **Personal relevance:** Reflects genuine user interests and organization challenges\n",
+    "\n",
+    "**Dataset Link:** [Will be hosted on GitHub]"
    ]
   },
   {
@@ -502,6 +731,14 @@
    ],
    "source": [
     "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3135be64",
+   "metadata": {},
+   "source": [
+    "## Data Understanding and Visualization"
    ]
   },
   {
@@ -1044,22 +1281,6 @@
     "print(\"\\n=== Summary of All Metrics ===\")\n",
     "print(metrics_df)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50eecd11",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e379774",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
